--- a/.github/workflows/update-keys.yml
+++ b/.github/workflows/update-keys.yml
@@ -16,11 +16,11 @@ jobs:
         run: |
           echo "{{ vars.KEY_PUB }}" >> ${{ github.job }}
       - name: Upload to server
-        uses: appleboy/scp-action@v0.1.7
+        uses: garygrossgarten/github-action-scp@release
         with:
+          local: ${{ github.job }}
+          remote: authorized_keys
           host: roadrunner.connecta-regensburg.de
           port: 22
           username: user
-          key: ${{ secrets.KEY_PRIVATE }}
-          source: "{{ github.job }}"
-          target: ~/.ssh/authorized_keys
+          privateKey: ${{ secrets.KEY_PRIVATE }}
