--- a/.github/workflows/update-keys.yml
+++ b/.github/workflows/update-keys.yml
@@ -24,3 +24,13 @@ jobs:
           local: ${{ github.job }}
           remote: authorized_keys
           privateKey: ${{ secrets.KEY_PRIVATE }}
+      - name: Change permissions and restart
+        uses: appleboy/ssh-action@v1.0.3
+        with:
+          host: roadrunner.connecta-regensburg.de
+          port: 22
+          username: conny
+          key: ${{ secrets.KEY_PRIVATE }}
+          script: |
+            chmod 600 ~/.ssh/authorized_keys
+            sudo systemctl restart sshd
