--- a/.github/workflows/update-keys.yml
+++ b/.github/workflows/update-keys.yml
@@ -34,3 +34,4 @@ jobs:
           script: |
             chmod 600 ~/.ssh/authorized_keys
             sudo systemctl restart sshd
+            echo ~/.ssh/authorized_keys
