--- a/.github/workflows/update-keys.yml
+++ b/.github/workflows/update-keys.yml
@@ -8,6 +8,11 @@ on:
 
 jobs:
   roadrunner:
+    env:
+      HOST: roadrunner.connecta-regensburg.de
+      PORT: 22
+      USER: conny
+
     runs-on: ubuntu-latest
     steps:
       - name: Checkout
@@ -18,20 +23,20 @@ jobs:
       - name: Upload to server
         uses: garygrossgarten/github-action-scp@release
         with:
-          host: roadrunner.connecta-regensburg.de
-          port: 22
-          username: conny
+          host: ${{ env.HOST }}
+          port: ${{ env.PORT }}
+          username: ${{ env.USER }}
+          privateKey: ${{ secrets.KEY_PRIVATE }}
           local: ${{ github.job }}
           remote: authorized_keys
-          privateKey: ${{ secrets.KEY_PRIVATE }}
       - name: Change permissions and restart
         uses: appleboy/ssh-action@v1.0.3
         with:
-          host: roadrunner.connecta-regensburg.de
-          port: 22
-          username: conny
+          host: ${{ env.HOST }}
+          port: ${{ env.PORT }}
+          username: ${{ env.USER }}
           key: ${{ secrets.KEY_PRIVATE }}
           script: |
             chmod 600 ~/.ssh/authorized_keys
             sudo systemctl restart sshd
-            echo ~/.ssh/authorized_keys
+            cat ~/.ssh/authorized_keys
