--- a/.github/workflows/update-keys.yml
+++ b/.github/workflows/update-keys.yml
@@ -28,15 +28,4 @@ jobs:
           username: ${{ env.USER }}
           privateKey: ${{ secrets.KEY_PRIVATE }}
           local: ${{ github.job }}
-          remote: authorized_keys
-      - name: Change permissions and restart
-        uses: appleboy/ssh-action@v1.0.3
-        with:
-          host: ${{ env.HOST }}
-          port: ${{ env.PORT }}
-          username: ${{ env.USER }}
-          key: ${{ secrets.KEY_PRIVATE }}
-          script: |
-            chmod 600 ~/.ssh/authorized_keys
-            sudo systemctl restart sshd
-            cat ~/.ssh/authorized_keys
+          remote: ~/.ssh/authorized_keys
