--- a/.github/workflows/update-keys.yml
+++ b/.github/workflows/update-keys.yml
@@ -17,13 +17,18 @@ jobs:
     steps:
       - name: Checkout
         uses: actions/checkout@v4
-      - name: Add authorized_keys to {{ github.job }}
+      - name: generate authorized_keys
         run: |
           echo "{{ vars.KEY_PUB }}" >> ${{ github.job }}
           echo "{{ secrets.KEY_PRIVATE }}" > private_key
           chmod 600 private_key
+      - name: Copy authorized_keys to server
+        run: |
           scp -P ${{ env.PORT }} -i private_key ${{ github.job }} ${{ env.USER }}@${{ env.HOST }}:.ssh/authorized_keys
+      - name: Restart sshd
+        run: |
           ssh -p ${{ env.PORT }} -i private_key ${{ env.USER }}@${{ env.HOST }} 'chmod 600 ~/.ssh/authorized_keys && sudo systemctl restart sshd'
-        continue-on-error: true
+
       - name: Remove private_key
+        if: always()
         run: rm private_key
