--- a/.github/workflows/update-keys.yml
+++ b/.github/workflows/update-keys.yml
@@ -24,10 +24,10 @@ jobs:
           chmod 600 private_key
       - name: Copy authorized_keys to server
         run: |
-          scp -P ${{ env.PORT }} -i private_key ${{ github.job }} ${{ env.USER }}@${{ env.HOST }}:.ssh/authorized_keys
+          scp -P ${{ env.PORT }} -i ./private_key ${{ github.job }} ${{ env.USER }}@${{ env.HOST }}:.ssh/authorized_keys
       - name: Restart sshd
         run: |
-          ssh -p ${{ env.PORT }} -i private_key ${{ env.USER }}@${{ env.HOST }} 'chmod 600 ~/.ssh/authorized_keys && sudo systemctl restart sshd'
+          ssh -p ${{ env.PORT }} -i ./private_key ${{ env.USER }}@${{ env.HOST }} 'chmod 600 ~/.ssh/authorized_keys && sudo systemctl restart sshd'
 
       - name: Remove private_key
         if: always()
