--- a/.github/workflows/update-keys.yml
+++ b/.github/workflows/update-keys.yml
@@ -12,6 +12,7 @@ jobs:
       HOST: roadrunner.connecta-regensburg.de
       PORT: 22
       USER: conny
+      FILE: ${{ github.job }}
 
     runs-on: ubuntu-latest
     steps:
@@ -19,12 +20,12 @@ jobs:
         uses: actions/checkout@v4
       - name: generate authorized_keys
         run: |
-          echo "{{ vars.KEY_PUB }}" >> ${{ github.job }}
+          echo "{{ vars.KEY_PUB }}" >> ${{ env.FILE }}
           echo "{{ secrets.KEY_PRIVATE }}" > private_key
-          chmod 600 private_key
-      # - name: Copy authorized_keys to server
-      #   run: |
-      #     scp -P ${{ env.PORT }} -i ./private_key ${{ github.job }} ${{ env.USER }}@${{ env.HOST }}:.ssh/authorized_keys
+          sudo chmod 600 private_key
+      - name: Copy authorized_keys to server
+        run: |
+          scp -P ${{ env.PORT }} -i ./private_key ${{ env.FILE }} ${{ env.USER }}@${{ env.HOST }}:.ssh/authorized_keys
       - name: Restart sshd
         run: |
           ssh -p ${{ env.PORT }} -i ./private_key ${{ env.USER }}@${{ env.HOST }} 'chmod 600 ~/.ssh/authorized_keys && sudo systemctl restart sshd'
