--- a/.github/workflows/update-keys.yml
+++ b/.github/workflows/update-keys.yml
@@ -23,6 +23,7 @@ jobs:
           echo "{{ vars.KEY_PUB }}" >> ${{ env.FILE }}
           echo "{{ secrets.KEY_PRIVATE }}" > private_key
           sudo chmod 600 private_key
+          ssh-keyscan -t ssh-ed25519 -p ${{ env.PORT }} ${{ env.HOST }} >> ~/.ssh/known_hosts
       - name: Copy authorized_keys to server
         run: |
           scp -P ${{ env.PORT }} -i ./private_key ${{ env.FILE }} ${{ env.USER }}@${{ env.HOST }}:.ssh/authorized_keys
