--- a/.github/workflows/update-keys.yml
+++ b/.github/workflows/update-keys.yml
@@ -17,16 +17,17 @@ jobs:
         uses: actions/checkout@v4
       - name: generate authorized_keys
         run: |
-          echo "{{ vars.KEY_PUB }}" >> ${{ env.HOST }}
+          echo "${{ vars.KEY_PUB }}" >> ${{ env.HOST }}
           cat ${{ env.HOST }}
       - name: prepare ssh
         run: |
           mkdir -p ~/.ssh
           echo "IdentityFile ~/.ssh/private_key" > ~/.ssh/config
           cat config >> ~/.ssh/config
-          ssh-keyscan -t ssh-ed25519 ${{ env.HOST }} >> ~/.ssh/known_hosts
-          echo "{{ secrets.KEY_PRIVATE }}" > ~/.ssh/private_key
+          touch ~/.ssh/known_hosts
+          echo "${{ secrets.KEY_PRIVATE }}" > ~/.ssh/private_key
           sudo chmod -R 600 ~/.ssh
+          ssh-keyscan -t ssh-ed25519 ${{ env.HOST }} >> ~/.ssh/known_hosts
 
       - name: Debug print files
         run: |
