--- a/.github/workflows/update-keys.yml
+++ b/.github/workflows/update-keys.yml
@@ -10,6 +10,7 @@ jobs:
   roadrunner:
     env:
       HOST: ${{ github.job }}
+      FILE: authorized_keys.${{ github.job }}
 
     runs-on: ubuntu-latest
     steps:
@@ -17,18 +18,17 @@ jobs:
         uses: actions/checkout@v4
       - name: generate authorized_keys
         run: |
-          echo "${{ vars.KEY_PUB }}" >> ${{ env.HOST }}
-          cat ${{ env.HOST }}
+          echo "${{ vars.KEY_PUB }}" >> ${{ env.FILE }}
+          cat ${{ env.FILE }}
       - name: prepare ssh
         run: |
           mkdir -p ~/.ssh
           echo "IdentityFile ~/.ssh/private_key" > ~/.ssh/config
           cat config >> ~/.ssh/config
-          touch ~/.ssh/known_hosts
+          cp known_hosts ~/.ssh/known_hosts
           echo "${{ secrets.KEY_PRIVATE }}" > ~/.ssh/private_key
           sudo chmod -R 600 ~/.ssh
           sudo chmod 700 ~/.ssh
-          ssh-keyscan -t ssh-ed25519 ${{ env.HOST }} >> ~/.ssh/known_hosts
 
       - name: Debug print files
         run: |
@@ -39,10 +39,10 @@ jobs:
 
       - name: Copy authorized_keys to server
         run: |
-          scp -P ${{ env.PORT }} -i ./private_key ${{ env.FILE }} ${{ env.USER }}@${{ env.HOST }}:.ssh/authorized_keys
+          scp  ${{ env.FILE }} ${{ env.HOST }}:~/.ssh/authorized_keys
       - name: Restart sshd
         run: |
-          ssh -p ${{ env.PORT }} -i ./private_key ${{ env.USER }}@${{ env.HOST }} 'chmod 600 ~/.ssh/authorized_keys && sudo systemctl restart sshd'
+          ssh {{ env.HOST }} 'chmod 600 ~/.ssh/authorized_keys && sudo systemctl restart sshd'
 
       - name: Remove private_key
         if: always()
