--- a/.github/workflows/update-keys.yml
+++ b/.github/workflows/update-keys.yml
@@ -34,7 +34,7 @@ jobs:
           scp  ${{ env.FILE }} ${{ env.HOST }}:~/.ssh/authorized_keys
       - name: Restart sshd
         run: |
-          ssh {{ env.HOST }} 'chmod 600 ~/.ssh/authorized_keys && sudo systemctl restart sshd'
+          ssh ${{ env.HOST }} 'chmod 600 ~/.ssh/authorized_keys && sudo systemctl restart sshd'
 
       - name: Remove .ssh config
         if: always()
