--- a/.github/workflows/update-all.yml
+++ b/.github/workflows/update-all.yml
@@ -9,4 +9,4 @@ jobs:
   roadrunner:
     uses: ./.github/workflows/update-keys.yml
     with:
-      HOST: ${{ github.job }}
+      HOST: roadrunner
