--- a/.github/workflows/update-keys.yml
+++ b/.github/workflows/update-keys.yml
@@ -26,6 +26,7 @@ jobs:
         uses: actions/checkout@v4
       - name: generate authorized_keys
         run: |
+          cat authorized_keys >> ${{ env.FILE }}
           echo "${{ vars.KEY_PUB }}" >> ${{ env.FILE }}
       - name: prepare ssh
         run: |
