--- a/.github/workflows/update-keys.yml
+++ b/.github/workflows/update-keys.yml
@@ -9,7 +9,11 @@ on:
       RESTART_SSH:
         required: false
         type: boolean
-        default: true
+        default: false
+      RESTART_SSHD:
+        required: false
+        type: boolean
+        default: false
       RUNS_ON:
         required: false
         type: string
@@ -32,6 +36,8 @@ jobs:
         run: |
           cat authorized_keys >> ${{ env.FILE }}
           echo "${{ vars.KEY_PUB }}" >> ${{ env.FILE }}
+          echo "Accepted keys:"
+          cat "${{ env.FILE }}"
       - name: prepare ssh
         run: |
           mkdir -p ~/.ssh
@@ -49,6 +55,10 @@ jobs:
           ssh ${{ env.HOST }} 'chmod 600 .ssh/authorized_keys'
       - name: Restart SSH
         if: inputs.RESTART_SSH
+        run: |
+          ssh ${{ env.HOST }} 'sudo systemctl restart ssh'
+      - name: Restart SSHD
+        if: inputs.RESTART_SSHD
         run: |
           ssh ${{ env.HOST }} 'sudo systemctl restart sshd'
       - name: Remove .ssh config
